# sheetkit

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
docs/: api.md  release.md
examples/: 01_basic_usage.py  02_head_and_num_columns.py  03_styled_columns.py  04_styled_rows.py  05_add_update_sheet.py  06_save_as_template.py  06_save_as_template.xltx  07_extract_formatter_from_sheet.py  07_imported_formatter.json  07_imported_formatter_no_zebra.json  08_read_sheet.py
scripts/: export_excel_themes.py  extract_formatter.py  format_xlsx.py  inspect_sheet_references.py
sheetkit/: __init__.py  colors.py  const.py  creator.py  fmt_openpyxl.py  fmt_xlsxwriter.py  formatter.py  helpers.py  themes.py  tools.py  types.py  utils.py
sheetkit/presets/formatters/: banded_col.json  banded_row.json  basis_col.json  basis_row.json  berlin_col.json  berlin_row.json  circuit_col.json  circuit_row.json  damask_col.json  damask_row.json  dividend_col.json  dividend_row.json  droplet_col.json  droplet_row.json  facet_col.json  facet_row.json  frame_col.json  frame_row.json  gallery_col.json  gallery_row.json  integral_col.json  integral_row.json  ion_boardroom_col.json  ion_boardroom_row.json  ion_col.json  ion_row.json  main_event_col.json  main_event_row.json  mesh_col.json  mesh_row.json  metropolitan_col.json  metropolitan_row.json  office_theme_col.json  office_theme_row.json  organic_col.json  organic_row.json  parallax_col.json  parallax_row.json  (+20 more)
tests/: test_colors.py  test_creator.py  test_formatter.py  test_presets.py  test_public_api.py  test_themes.py
(+29 files in other folders)
