[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sheetkit"
version = "0.1.1"
description = "A small Python library for writing formatted Excel files."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "sheetkit contributors" }
]
keywords = ["excel", "xlsx", "openpyxl", "xlsxwriter", "formatting"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "openpyxl>=3.1",
  "xlsxwriter>=3.1",
]

[project.urls]
Homepage = "https://github.com/Prevalex/sheetkit"
Repository = "https://github.com/Prevalex/sheetkit"
Documentation = "https://github.com/Prevalex/sheetkit/blob/main/docs/api.md"
Issues = "https://github.com/Prevalex/sheetkit/issues"

[project.optional-dependencies]
xls = ["xlrd>=2.0"]
dev = [
  "build>=1.0",
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.6",
  "twine>=5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sheetkit*"]

[tool.setuptools.package-data]
sheetkit = ["presets/**/*.json"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["F"]
